Update 'bulr8rg7g-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f4be887da2.s0qp.p3.openshiftapps.com/rhtap/rhtap-qe:46ff767d31458469f172cdf836172f8d9eba822f@sha256:687f2df0d4e2f959d066bb74ca4c1beb14a09df5e6c4e416f16f40cdbd69a125

--- a/components/bulr8rg7g-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/bulr8rg7g-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: bulr8rg7g-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f4be887da2.s0qp.p3.openshiftapps.com/rhtap/rhtap-qe:46ff767d31458469f172cdf836172f8d9eba822f@sha256:687f2df0d4e2f959d066bb74ca4c1beb14a09df5e6c4e416f16f40cdbd69a125
+          name: container-image
